@@ -97,8 +97,6 @@ Readonly my $EMPTY_LIST              => -1;
 Readonly my $_100_PERCENT            => 100;
 Readonly my $MAX_DPI                 => 2400;
 Readonly my $BITS_PER_BYTE           => 8;
-Readonly my $DAYS_PER_MONTH          => 31;
-Readonly my $MONTHS_PER_YEAR         => 12;
 Readonly my $RIGHT_MOUSE_BUTTON      => 3;
 Readonly my $SELECTOR_X              => 0;
 Readonly my $SELECTOR_Y              => 1;
@@ -2068,24 +2066,6 @@ sub get_pagelist {
     return ( $pagelist, $n );
 }
 
-sub text_to_date {
-    my ($text) = @_;
-    my ( $year,     $month,     $day );
-    my ( $thisyear, $thismonth, $thisday ) =
-      Gscan2pdf::Document::seconds_to_date(time);
-    if ( $text =~ /^(\d+)?-?(\d+)?-?(\d+)?$/smx ) {
-        ( $year, $month, $day ) = ( $1, $2, $3 );
-    }
-    if ( not defined $year ) { $year = $thisyear }
-    if ( not defined $month or $month < 1 or $month > $MONTHS_PER_YEAR ) {
-        $month = $thismonth;
-    }
-    if ( not defined $day or $day < 1 or $day > $DAYS_PER_MONTH ) {
-        $day = $thisday;
-    }
-    return $year, $month, $day;
-}
-
 # Add PDF options to $vbox
 
 sub add_metadata_dialog {
@@ -2108,7 +2088,8 @@ sub add_metadata_dialog {
     $table->attach( $hboxe, 0, 1, 0, 1, 'fill', 'shrink', 0, 0 );
     my $labele = Gtk2::Label->new( $d->get('Date') );
     $hboxe->pack_start( $labele, FALSE, TRUE, 0 );
-    my ( $year, $month, $day ) = text_to_date( $SETTING{'document date'} );
+    my ( $year, $month, $day ) =
+      Gscan2pdf::Document::text_to_date( $SETTING{'document date'}, time );
 
     my $entryd =
       Gtk2::Entry->new_with_max_length(10);  ## no critic (ProhibitMagicNumbers)
@@ -2130,7 +2111,8 @@ sub add_metadata_dialog {
     $entryd->signal_connect(
         'focus-out-event' => sub {
             my $text = $entryd->get_text;
-            $entryd->set_text( sprintf '%04d-%02d-%02d', text_to_date($text) );
+            $entryd->set_text( sprintf '%04d-%02d-%02d',
+                Gscan2pdf::Document::text_to_date( $text, time ) );
             return FALSE;
         }
     );
@@ -2149,7 +2131,8 @@ sub add_metadata_dialog {
 
             # Editing the entry and clicking the edit button bypasses the
             # focus-out-event, so update the date now
-            ( $year, $month, $day ) = text_to_date( $entryd->get_text );
+            ( $year, $month, $day ) =
+              Gscan2pdf::Document::text_to_date( $entryd->get_text, time );
 
             $calendar->select_day($day);
             $calendar->select_month( $month - 1, $year );
@@ -2282,33 +2265,8 @@ sub update_metadata_settings {
     $SETTING{subject}  = $entrys->update( $SETTING{'subject-suggestions'} );
     $SETTING{keywords} = $entryk->update( $SETTING{'keyword-suggestions'} );
     $SETTING{'document date'} = sprintf '%04d-%02d-%02d',
-      text_to_date( $entryd->get_text );
+      Gscan2pdf::Document::text_to_date( $entryd->get_text, time );
     return;
-}
-
-sub expand_metadata_pattern {
-    my $template = shift;
-    my ( $dyear, $dmonth, $dday, $dhour, $dmin, $dsec ) =
-      text_to_date( $SETTING{'document date'} );
-    $dmonth = sprintf '%02d', $dmonth;
-    $dday   = sprintf '%02d', $dday;
-    my ( $tyear, $tmonth, $tday ) = Gscan2pdf::Document::seconds_to_date(time);
-    $tmonth = sprintf '%02d', $tmonth;
-    $tday   = sprintf '%02d', $tday;
-
-    $template =~ s/%a/$SETTING{author}/gsm;
-    $template =~ s/%t/$SETTING{title}/gsm;
-    $template =~ s/%y/$dyear/gsm;
-    $template =~ s/%Y/$tyear/gsm;
-    $template =~ s/%m/$dmonth/gsm;
-    $template =~ s/%M/$tmonth/gsm;
-    $template =~ s/%d/$dday/gsm;
-    $template =~ s/%D/$tday/gsm;
-    $template =~ s/%h/$dhour/gsm;
-    $template =~ s/%i/$dmin/gsm;
-    $template =~ s/%s/$dsec/gsm;
-
-    return $template;
 }
 
 sub prepare_output_metadata {
@@ -2320,7 +2278,8 @@ sub prepare_output_metadata {
           $type eq 'PDF'
           ? "D:%4i%02i%02i000000+00'00'"
           : '%4i-%02i-%02i 00:00:00+00:00';
-        my ( $year, $month, $day ) = text_to_date( $SETTING{'document date'} );
+        my ( $year, $month, $day ) =
+          Gscan2pdf::Document::text_to_date( $SETTING{'document date'}, time );
         $h{CreationDate} = sprintf $dateformat, $year, $month, $day;
         $h{ModDate}      = sprintf $dateformat, $year, $month, $day;
         $h{Creator}      = "$prog_name v$VERSION";
@@ -2875,8 +2834,11 @@ sub save_button_clicked_callback {
                     'gtk-save'   => 'ok'
                 );
 
-                my $filename =
-                  expand_metadata_pattern( $SETTING{'default filename'} );
+                my $filename = Gscan2pdf::Document::expand_metadata_pattern(
+                    $SETTING{'default filename'},
+                    $SETTING{'document date'},
+                    time, $SETTING{author}, $SETTING{title}
+                );
 
                # avoid leading and trailing blanks in expanded filename template
                 $filename =~ s/^\s*(.*?)\s*$/$1/xsm;
@@ -2920,8 +2882,11 @@ sub save_button_clicked_callback {
                 'gtk-save'   => 'ok'
             );
 
-            my $filename =
-              expand_metadata_pattern( $SETTING{'default filename'} );
+            my $filename = Gscan2pdf::Document::expand_metadata_pattern(
+                $SETTING{'default filename'},
+                $SETTING{'document date'},
+                time, $SETTING{author}, $SETTING{title}
+            );
 
             # avoid leading and trailing blanks in expanded filename template
             $filename =~ s/^\s*(.*?)\s*$/$1/xsm;
@@ -6772,7 +6737,7 @@ sub preferences {    ## no critic (ProhibitExcessComplexity)
     $tooltips->set_tip(
         $fileentry,
         $d->get(
-"\%a\t author\n\%t\t title\n\%y\t document's year\n\%Y\t today's year\n\%m\t document's month\n\%M\t today's month\n\%d\t document's day\n\%D\t today's day\n\%h\t document's hour\n\%i\tdocument's minute\n\%s\t document's second"
+"\%a\t author\n\%t\t title\n\%y\t document's year\n\%Y\t today's year\n\%m\t document's month\n\%M\t today's month\n\%d\t document's day\n\%D\t today's day\n\%H\t today's hour\n\%I\t today's minute\n\%S\t today's second"
         )
     );
     $hbox->add($fileentry);
@@ -7738,9 +7703,9 @@ metadata:
  %M	today's month
  %d	document's day
  %D	today's day
- %h	document's hour
- %i	document's minute
- %s	document's second
+ %H	today's hour
+ %I	today's minute
+ %S	today's second
 
 =head2 View
 
